services/minio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # issuer for auto-cert
    certmanager.k8s.io/cluster-issuer: global-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: minio
  namespace: minio
spec:
  rules:
    - host: {}
      http:
        paths:
          - backend:
              serviceName: minio-service
              servicePort: 9000
  tls:
    - hosts:
        - {}
      secretName: minio-tls
